--- a/wireframes with HTML and CSS/html/CSS/global_style.css
+++ b/wireframes with HTML and CSS/html/CSS/global_style.css
@@ -2,23 +2,17 @@ html, body {
     margin: 0;
     padding: 0;
     background-color: rgba(209, 205, 185, 1);
-    width:100%;
-    height: 100%;
 }
 
-
 nav {
-    margin: 0;
-    padding: 0;
     background-color: rgba(221, 76, 14, 0.59);
     box-shadow: 0 7px 5px rgba(0, 0, 0, 0.075);
     height: 10vh;
 }
 
+
+
 .login-form {
-	position: absolute;
-    top: 50%;
-    left: 50%;
-    margin-right: -50%;
-   	transform: translate(-50%, -50%);
+	margin-top:35vh;
+	text-align: center;
 }
