--- a/wireframes with HTML and CSS/html/CSS/global_style.css
+++ b/wireframes with HTML and CSS/html/CSS/global_style.css
@@ -1,18 +1,96 @@
-html, body {
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
+
+* {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
+    font-family: 'Open Sans', sans-serif;
+}
+
+body, html {
+	width: auto;
     background-color: rgba(209, 205, 185, 1);
 }
 
-nav {
+.navbar {
+	overflow: hidden;
     background-color: rgba(221, 76, 14, 0.59);
     box-shadow: 0 7px 5px rgba(0, 0, 0, 0.075);
-    height: 10vh;
+    display: flex;
+    height: 90px;
+    width: 100%;
+    padding-left: 10%;
+    padding-right: 10%;
+    font-size: 25px;
+}
+
+#app_logo {
+	display: inline-flex;
+	text-align: center;
+	font-size: 37px;
+	padding: 13px 0;
+}
+
+#app_logo > i {
+	font-size: 48px;
+}
+
+#app_logo > p {
+	margin-left: 10px;
+}
+
+#desctop_navbar_buttons {
+	margin-left: auto;
+	float: right;
+	padding: 25px 10px;
+}
+
+#desctop_navbar_buttons > a {
+	padding: 10px;
+	text-decoration: none;
+	color: black;
+}
+
+#desctop_navbar_buttons > a:hover {
+  	color: rgba(172, 194, 32, 1);
+}
+
+#phone_navbar_button {
+	display: none;
 }
 
 
+@media (max-width: 980px) {
+.navbar {
+	height: 10vh;
+}
 
-.login-form {
-	margin-top:35vh;
-	text-align: center;
+#app_logo {
+	padding: 30px 0;
+	font-size: 60px;
+}
+
+#app_logo > p {
+	margin: 20px 30px;
+}
+
+#app_logo > i {
+	font-size: 120px;
+}
+
+#phone_navbar_button {
+	display: block;
+	margin-left: auto;
+	float: right;
+}
+
+#phone_navbar_button > i {
+	font-size: 120px;
+	padding: 30px 0;
+}
+
+#desctop_navbar_buttons {
+	display: none;
+}
+
 }
