--- a/wireframes with HTML and CSS/html/CSS/global_style.css
+++ b/wireframes with HTML and CSS/html/CSS/global_style.css
@@ -13,7 +13,7 @@ body, html {
 }
 
 .navbar {
-	overflow: hidden;
+	display: inline-block;
     background-color: rgba(221, 76, 14, 0.59);
     box-shadow: 0 7px 5px rgba(0, 0, 0, 0.075);
     display: flex;
@@ -39,19 +39,19 @@ body, html {
 	margin-left: 10px;
 }
 
-#desctop_navbar_buttons {
+#desctop_navbar_buttons_login {
 	margin-left: auto;
 	float: right;
 	padding: 25px 10px;
 }
 
-#desctop_navbar_buttons > a {
+#desctop_navbar_buttons_login > a {
 	padding: 10px;
 	text-decoration: none;
 	color: black;
 }
 
-#desctop_navbar_buttons > a:hover {
+#desctop_navbar_buttons_login > a:hover {
   	color: rgba(172, 194, 32, 1);
 }
 
@@ -80,6 +80,7 @@ body, html {
 
 #phone_navbar_button {
 	display: block;
+	height: 10vh;
 	margin-left: auto;
 	float: right;
 }
@@ -89,8 +90,15 @@ body, html {
 	padding: 30px 0;
 }
 
-#desctop_navbar_buttons {
+#desctop_navbar_buttons_login {
 	display: none;
+	position: fixed;
+	width: inherit;
+	top: 140px;
+	padding-right: 20%;
+  	grid-template-columns: 1fr 1fr;
+  	text-align: center;
+  	font-size: 50px;
 }
 
 }
