--- a/wireframes with HTML and CSS/templates/CSS/global_style.css
+++ b/wireframes with HTML and CSS/templates/CSS/global_style.css
@@ -106,4 +106,16 @@ body, html {
   	font-size: 50px;
 }
 
+#desctop_navbar_buttons {
+	display: none;
+	position: fixed;
+	width: inherit;
+	top: 140px;
+	margin-left: 0;
+	padding-right: 20%;
+  	grid-template-columns: 2fr 2fr 2fr 2.5fr;
+  	text-align: center;
+  	font-size: 45px;
+}
+
 }
