--- a/wireframes with HTML and CSS/templates/CSS/todo_and_habits_styles.css
+++ b/wireframes with HTML and CSS/templates/CSS/todo_and_habits_styles.css
@@ -1,6 +1,17 @@
 main {
 	text-align: center;
 	display: block;
+	margin-top: 5vh;
+}
+
+
+.todo-container {
+	margin-bottom: 5vh;
+	margin-right: 10%;
+	margin-left: 10%;
+	display: grid;
+	grid-template-columns: 3fr 7fr 7fr;
+	background: rgba(221, 76, 14, 0.42);
 }
 
 .complited-todo-item, .todo-item {
@@ -55,16 +66,6 @@ main {
 
 .todo-item-delete-button > i:hover {
 	font-size: 30px;
-}
-
-.todo-container {
-	margin-top: 5vh;
-	margin-bottom: 5vh;
-	margin-right: 10%;
-	margin-left: 10%;
-	display: grid;
-	grid-template-columns: 3fr 7fr 7fr;
-	background: rgba(221, 76, 14, 0.42);
 }
 
 #important.todo-title, #not-important.todo-title, #urgent.todo-title, #not-urgent.todo-title {
@@ -136,4 +137,13 @@ main {
 	background: rgba(221, 76, 14, 0.59);
 	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 	border-radius: 17px;
+}
+
+.add_todo_button:hover {
+	padding: 13px;
+}
+
+@media (max-width: 980px) {
+
+
 }
