--- a/wireframes with HTML and CSS/templates/CSS/todo_styles.css
+++ b/wireframes with HTML and CSS/templates/CSS/todo_styles.css
@@ -15,11 +15,12 @@ main {
 }
 
 .complited-todo-item, .todo-item {
+	display: grid;
+	grid-template-columns: 5fr 1fr 1fr;
 	width: 100%;
 	height: 60px;
 	margin-top: 10px;
 	padding: 10px 15px;
-	display: inline-block;
 	font-size: 25px;
 }
 
@@ -38,7 +39,9 @@ main {
 }
 
 .todo-item-title {
-	display: inline-block;
+	display: block;
+	grid-row: 1;
+	grid-column: 1;
 }
 
 .todo-item-delete-button, .todo-item-done-button {
@@ -47,9 +50,16 @@ main {
 	background: inherit;
 	border: none;
 	font-size: 25px;
-	margin-left: auto;
-	float: right;
-	margin-right: 10px;
+}
+
+.todo-item-done-button {
+	grid-row: 1;
+	grid-column: 2;
+}
+
+.todo-item-delete-button {
+	grid-row: 1;
+	grid-column: 3;
 }
 
 .todo-item-done-button > i {
@@ -205,11 +215,8 @@ main {
 	}
 
 	.complited-todo-item, .todo-item {
-		width: 100%;
 		height: 100px;
 		margin-top: 20px;
-		padding: 10px 15px;
-		display: inline-block;
 		font-size: 35px;
 		padding-top: 25px;
 	}
@@ -245,9 +252,6 @@ main {
 		background: inherit;
 		border: none;
 		font-size: 25px;
-		margin-left: auto;
-		float: right;
-		margin-right: 10px;
 	}
 
 	.todo-item-done-button > i, .todo-item-delete-button > i {
