The id of elements were replaced by name of classes where it's better to rely on it

--- a/wireframes with HTML and CSS/templates/login.html
+++ b/wireframes with HTML and CSS/templates/login.html
@@ -13,17 +13,17 @@
 </head>
 <body>
     <div class="navbar" id="navbar">
-        <a id="app_logo">
+        <a class="app_logo">
             <i class="material-icons md-48">done_all</i>
             <p>TODO List</p>
         </a>
         
-        <div id="desctop_navbar_buttons_login">
+        <div class="desctop_navbar_buttons_login">
             <a href="#">Log in</a>
             <a href="#">Sign up</a>
         </div>
         
-        <button id="phone_navbar_button" onclick="get_drop_login_menu()"><i class="material-icons md-48">reorder</i></button>
+        <button class="phone_navbar_button" onclick="get_drop_login_menu()"><i class="material-icons md-48">reorder</i></button>
     </div>
 
     <form class="login-form" id="login-form" method="post">
