--- a/wireframes with HTML and CSS/templates/CSS/global_style.css
+++ b/wireframes with HTML and CSS/templates/CSS/global_style.css
@@ -24,47 +24,47 @@ body, html {
     font-size: 25px;
 }
 
-#app_logo {
+.app_logo {
 	display: grid;
 	text-align: center;
 	font-size: 37px;
 	padding: 13px 0;
 }
 
-#app_logo > i {
+.app_logo > i {
 	font-size: 48px;
 	grid-row: 1;
 }
 
-#app_logo > p {
+.app_logo > p {
 	margin-left: 10px;
 	grid-row: 1;
 }
 
-#desctop_navbar_buttons {
+.desctop_navbar_buttons {
 	display: inline-block;
 	margin-left: 50px;
 	padding: 25px 10px;
 }
 
-#desctop_navbar_buttons_login {
+.desctop_navbar_buttons_login {
 	display: block;
 	margin-left: auto;
 	justify-content: end; 
 	padding: 25px 10px;
 }
 
-#desctop_navbar_buttons_login > a, #desctop_navbar_buttons > a {
+.desctop_navbar_buttons_login > a, .desctop_navbar_buttons > a {
 	padding: 10px;
 	text-decoration: none;
 	color: black;
 }
 
-#desctop_navbar_buttons_login > a:hover, #desctop_navbar_buttons > a:hover {
+.desctop_navbar_buttons_login > a:hover, .desctop_navbar_buttons > a:hover {
   	color: rgba(172, 194, 32, 1);
 }
 
-#phone_navbar_button {
+.phone_navbar_button {
 	display: none;
 }
 
@@ -87,20 +87,20 @@ body, html {
 		height: 10vh;
 	}
 
-	#app_logo {
+	.app_logo {
 		padding: 30px 0;
 		font-size: 60px;
 	}
 
-	#app_logo > p {
+	.app_logo > p {
 		margin: 20px 30px;
 	}
 
-	#app_logo > i {
+	.app_logo > i {
 		font-size: 120px;
 	}
 
-	#phone_navbar_button {
+	.phone_navbar_button {
 		display: block;
 		grid-row: 1; 
 		grid-column: 2;
@@ -109,12 +109,12 @@ body, html {
 		height: 10vh;
 	}
 
-	#phone_navbar_button > i {
+	.phone_navbar_button > i {
 		font-size: 120px;
 		padding: 30px 0;
 	}
 
-	#desctop_navbar_buttons_login {
+	.desctop_navbar_buttons_login {
 		display: none;
 		position: fixed;
 		width: inherit;
@@ -125,7 +125,7 @@ body, html {
 	  	font-size: 50px;
 	}
 
-	#desctop_navbar_buttons {
+	.desctop_navbar_buttons {
 		display: none;
 		position: fixed;
 		width: inherit;
