--- a/wireframes with HTML and CSS/templates/trash.html
+++ b/wireframes with HTML and CSS/templates/trash.html
@@ -13,19 +13,19 @@
 </head>
 <body>
     <div class="navbar" id="navbar">
-        <a id="app_logo">
+        <a class="app_logo">
             <i class="material-icons md-48">done_all</i>
             <p>TODO List</p>
         </a>
         
-        <div id="desctop_navbar_buttons">
+        <div class="desctop_navbar_buttons">
             <a href="#">Todo's</a>
             <a href="#">Habits</a>
             <a href="#">Trash</a>
             <a href="#">Sign out</a>
         </div>
         
-        <button id="phone_navbar_button" onclick="get_drop_login_menu()"><i class="material-icons md-48">reorder</i></button>
+        <button class="phone_navbar_button" onclick="get_drop_login_menu()"><i class="material-icons md-48">reorder</i></button>
     </div>
 
     <main>
