--- a/wireframes with HTML and CSS/templates/CSS/global_style.css
+++ b/wireframes with HTML and CSS/templates/CSS/global_style.css
@@ -42,9 +42,9 @@ body, html {
 }
 
 .desctop_navbar_buttons {
-	display: inline-block;
-	margin-left: 50px;
-	padding: 25px 10px;
+	padding-left: 10%;
+	display: grid;
+	grid-template-columns: auto auto auto auto 1fr;
 }
 
 .desctop_navbar_buttons_login {
@@ -55,9 +55,9 @@ body, html {
 }
 
 .desctop_navbar_buttons_login > a, .desctop_navbar_buttons > a {
-	padding: 10px;
 	text-decoration: none;
 	color: black;
+	padding: 25px 10px;
 }
 
 .desctop_navbar_buttons_login > a:hover, .desctop_navbar_buttons > a:hover {
@@ -84,10 +84,14 @@ body, html {
 
 @media (max-width: 980px) {
 	.navbar {
-		height: 10vh;
+		display: grid;
+		grid-template-columns: auto 1fr;
+		height: 180px;
 	}
 
 	.app_logo {
+		grid-row: 1;
+		grid-column: 1;
 		padding: 30px 0;
 		font-size: 60px;
 	}
@@ -106,15 +110,18 @@ body, html {
 		grid-column: 2;
 		margin-left: auto;
 		justify-content: end;
-		height: 10vh;
+		align-self: start;
 	}
 
 	.phone_navbar_button > i {
+		grid-row: 1;
+		grid-column: 2;
 		font-size: 120px;
 		padding: 30px 0;
 	}
 
 	.desctop_navbar_buttons_login {
+		grid-row: 2; 
 		display: none;
 		position: fixed;
 		width: inherit;
@@ -126,11 +133,14 @@ body, html {
 	}
 
 	.desctop_navbar_buttons {
+		grid-row: 2; 
+		grid-column-start: 1;
+		grid-column-end: 2;
 		display: none;
 		position: fixed;
 		width: inherit;
 		top: 140px;
-		margin-left: 0;
+		padding-left: 0%;
 		padding-right: 20%;
 	  	grid-template-columns: 2fr 2fr 2fr 2.5fr;
 	  	text-align: center;
