--- a/wireframes with HTML and CSS/templates/CSS/login_register_form.css
+++ b/wireframes with HTML and CSS/templates/CSS/login_register_form.css
@@ -1,5 +1,5 @@
 .login-form {
-	margin-top:35vh;
+	margin-top: 255px;
 	text-align: center;
 }
 
@@ -26,7 +26,7 @@
 @media (max-width: 980px) {
 
 	.login-form {
-		margin-top:30vh;
+		margin-top: 522px;
 	}
 
 	.username_field > input, .password_field > input {
