--- a/wireframes with HTML and CSS/templates/login.html
+++ b/wireframes with HTML and CSS/templates/login.html
@@ -19,8 +19,8 @@
         </a>
         
         <div class="desctop_navbar_buttons_login">
-            <a href="#">Log in</a>
-            <a href="#">Sign up</a>
+            <a id="login_button" href="#">Log in</a>
+            <a id="signup_button" href="#">Sign up</a>
         </div>
         
         <button class="phone_navbar_button" onclick="get_drop_login_menu()"><i class="material-icons md-48">reorder</i></button>
