ol-lists'd been embedded in sections on the todo's-page

--- a/wireframes with HTML and CSS/templates/todos.html
+++ b/wireframes with HTML and CSS/templates/todos.html
@@ -60,71 +60,77 @@
             </div>
 
             <section class="todo-category" id="important-urgent">
-                <div class="todo-item">
-                    <p class="todo-item-title">Todo 1</p>
-                    <button class="todo-item-delete-button">
-                        <i class="material-icons">delete</i>
-                    </button>
-                    <button class="todo-item-done-button">
-                        <i class="material-icons">done_outline</i>
-                    </button>
-                </div>
+                <ol class="important-urgent-list">
+                    <li class="todo-item">
+                        <p class="todo-item-title">Todo 1</p>
+                        <button class="todo-item-delete-button">
+                            <i class="material-icons">delete</i>
+                        </button>
+                        <button class="todo-item-done-button">
+                            <i class="material-icons">done_outline</i>
+                        </button>
+                    </li>
 
-                <div class="complited-todo-item">
-                    <p class="todo-item-title">Completed todo</p>
-                    <button class="todo-item-delete-button">
-                        <i class="material-icons">delete</i>
-                    </button>
-                </div>
+                    <li class="complited-todo-item">
+                        <p class="todo-item-title">Completed todo</p>
+                        <button class="todo-item-delete-button">
+                            <i class="material-icons">delete</i>
+                        </button>
+                    </li>
 
-                <div class="todo-item">
-                    <p class="todo-item-title">Todo 3</p>
-                    <button class="todo-item-delete-button">
-                        <i class="material-icons">delete</i>
-                    </button>
-                    <button class="todo-item-done-button">
-                        <i class="material-icons">done_outline</i>
-                    </button>
-                </div>
+                    <li class="todo-item">
+                        <p class="todo-item-title">Todo 3</p>
+                        <button class="todo-item-delete-button">
+                            <i class="material-icons">delete</i>
+                        </button>
+                        <button class="todo-item-done-button">
+                            <i class="material-icons">done_outline</i>
+                        </button>
+                    </li>
 
-                <div class="todo-item">
-                    <p class="todo-item-title">Todo 5</p>
-                    <button class="todo-item-delete-button">
-                        <i class="material-icons">delete</i>
-                    </button>
-                    <button class="todo-item-done-button">
-                        <i class="material-icons">done_outline</i>
-                    </button>
-                </div>
+                    <li class="todo-item">
+                        <p class="todo-item-title">Todo 5</p>
+                        <button class="todo-item-delete-button">
+                            <i class="material-icons">delete</i>
+                        </button>
+                        <button class="todo-item-done-button">
+                            <i class="material-icons">done_outline</i>
+                        </button>
+                    </li>
 
-                <div class="todo-item">
-                    <p class="todo-item-title">Todo 6</p>
-                    <button class="todo-item-delete-button">
-                        <i class="material-icons">delete</i>
-                    </button>
-                    <button class="todo-item-done-button">
-                        <i class="material-icons">done_outline</i>
-                    </button>
-                </div>
+                    <li class="todo-item">
+                        <p class="todo-item-title">Todo 6</p>
+                        <button class="todo-item-delete-button">
+                            <i class="material-icons">delete</i>
+                        </button>
+                        <button class="todo-item-done-button">
+                            <i class="material-icons">done_outline</i>
+                        </button>
+                    </li>
+                </ol>
             </section>
 
             <section class="todo-category" id="not-important-urgent">
+                <ol class="not-important-urgent-list"></ol>
             </section>
 
             <section class="todo-category" id="important-not-urgent">
+                <ol class="important-not-urgent-list"></ol>
             </section>
 
             <section class="todo-category" id="not-important-not-urgent">
-                <div class="todo-item">
-                    <p class="todo-item-title">Todo 4</p>
-                    <button class="todo-item-delete-button">
-                        <i class="material-icons">delete</i>
-                    </button>
+                <ol class="not-important-not-urgent-list">
+                    <li class="todo-item">
+                        <p class="todo-item-title">Todo 4</p>
+                        <button class="todo-item-delete-button">
+                            <i class="material-icons">delete</i>
+                        </button>
 
-                    <button class="todo-item-done-button">
-                        <i class="material-icons">done_outline</i>
-                    </button>
-                </div>
+                        <button class="todo-item-done-button">
+                            <i class="material-icons">done_outline</i>
+                        </button>
+                    </li>
+                </ol>
             </section>
         </div>
 
