--- a/wireframes with HTML and CSS/templates/trash.html
+++ b/wireframes with HTML and CSS/templates/trash.html
@@ -71,7 +71,7 @@
 
         <div class="trash-container">
             <div class="trash-item">
-                <p class="trash-item-name">Todo 4</p>
+                <p class="trash-item-name">very very very very very very very long Todo 4</p>
                 <p class="trash-item-category">Todo</p>
                 <button class="trash-item-back-button">Back</button>
                 <button class="trash-item-delete-button">Remove permanently</button>
