--- a/wireframes with HTML and CSS/templates/CSS/thash_styles.css
+++ b/wireframes with HTML and CSS/templates/CSS/thash_styles.css
@@ -30,14 +30,15 @@ main {
 } 
 
 .trash-item-category {
-	margin-right: auto;
-	justify-content: start;
+	margin: auto;
+	justify-content: center;
 	opacity: 0.7;
 }
 
 .trash-item-back-button, .trash-item-delete-button {
-	margin: 5px 5px;
-	padding: 7px 7px;
+	margin: auto;
+	justify-content: center;
+	padding: 15px 15px;
 	border-radius: 13px;
 	font-size: 15px;
 }
@@ -94,11 +95,11 @@ main {
 	}
 
 	.trash-item-back-button, .trash-item-delete-button {
+		padding: 10px 5px;
 		font-size: 25px;
 	}
 
 	.trash-item-name, .trash-item-category {
-		padding-top: 20px;
 		font-size: 40px;
 	} 
 
