--- a/wireframes with HTML and CSS/templates/CSS/todo_styles.css
+++ b/wireframes with HTML and CSS/templates/CSS/todo_styles.css
@@ -18,9 +18,9 @@ main {
 	display: grid;
 	grid-template-columns: 5fr 1fr 1fr;
 	width: 100%;
-	height: 60px;
+	height: auto;
 	margin-top: 10px;
-	padding: 10px 15px;
+	padding: 20px 25px;
 	font-size: 25px;
 }
 
@@ -47,6 +47,8 @@ main {
 .todo-item-delete-button, .todo-item-done-button {
 	width: 40px;
 	height: 40px;
+	margin: auto;
+	justify-content: center;
 	background: inherit;
 	border: none;
 	font-size: 25px;
@@ -215,10 +217,10 @@ main {
 	}
 
 	.complited-todo-item, .todo-item {
-		height: 100px;
+		height: auto;
 		margin-top: 20px;
 		font-size: 35px;
-		padding-top: 25px;
+		padding: 20px 25px;
 	}
 
 	#important-urgent.todo-category, #not-important-urgent.todo-category, #important-not-urgent.todo-category, #not-important-not-urgent.todo-category {
@@ -247,6 +249,7 @@ main {
 	}
 
 	.todo-item-delete-button, .todo-item-done-button {
+		margin-left: 20px;
 		width: 60px;
 		height: 60px;
 		background: inherit;
