--- a/wireframes with HTML and CSS/templates/habits.html
+++ b/wireframes with HTML and CSS/templates/habits.html
@@ -34,7 +34,7 @@
 
         <div class="habits-container">
             <div class="habit">
-                <p class="habit-title">Task 1</p>
+                <p class="habit-title">very very very very very very very long Task 1</p>
 
                 <div class="habit-category">
                     <div class="bg"></div>
