--- a/wireframes with HTML and CSS/templates/todos.html
+++ b/wireframes with HTML and CSS/templates/todos.html
@@ -62,7 +62,7 @@
             <section class="todo-category" id="important-urgent">
                 <ol class="important-urgent-list">
                     <li class="todo-item">
-                        <p class="todo-item-title">Todo 1</p>
+                        <p class="todo-item-title">very very very very very very very long Todo 1</p>
                         <button class="todo-item-delete-button">
                             <i class="material-icons">delete</i>
                         </button>
