--- a/wireframes with HTML and CSS/templates/CSS/todo_styles.css
+++ b/wireframes with HTML and CSS/templates/CSS/todo_styles.css
@@ -49,7 +49,7 @@ main {
 	height: 40px;
 	margin: auto;
 	justify-content: center;
-	background: inherit;
+	background: transparent;
 	border: none;
 	font-size: 25px;
 }
@@ -252,7 +252,6 @@ main {
 		margin-left: 20px;
 		width: 60px;
 		height: 60px;
-		background: inherit;
 		border: none;
 		font-size: 25px;
 	}
