--- a/wireframes with HTML and CSS/templates/todos.html
+++ b/wireframes with HTML and CSS/templates/todos.html
@@ -62,50 +62,51 @@
             <section class="todo-category" id="important-urgent">
                 <ol class="important-urgent-list">
                     <li class="todo-item">
-                        <p class="todo-item-title">very very very very very very very long Todo 1</p>
-                        <button class="todo-item-delete-button">
-                            <i class="material-icons">delete</i>
+                      <p class="todo-item-title">very very very very very very very long Todo 1</p>
+                      <div class="todo-item__controls">
+                        <button class="todo-item-button todo-item-button--done">
+                          <i class="material-icons">done_outline</i>
                         </button>
-                        <button class="todo-item-done-button">
-                            <i class="material-icons">done_outline</i>
+                        <button class="todo-item-button todo-item-button--delete">
+                          <i class="material-icons">delete</i>
                         </button>
+                      </div>
                     </li>
 
                     <li class="complited-todo-item">
-                        <p class="todo-item-title">Completed todo</p>
-                        <button class="todo-item-delete-button">
-                            <i class="material-icons">delete</i>
+                      <p class="todo-item-title">Completed todo</p>
+                      <div class="todo-item__controls">
+                        <button class="todo-item-button todo-item-button--done">
+                          <i class="material-icons">done_outline</i>
                         </button>
+                        <button class="todo-item-button todo-item-button--delete">
+                          <i class="material-icons">delete</i>
+                        </button>
+                      </div>
                     </li>
 
                     <li class="todo-item">
-                        <p class="todo-item-title">Todo 3</p>
-                        <button class="todo-item-delete-button">
-                            <i class="material-icons">delete</i>
+                      <p class="todo-item-title">Todo 2</p>
+                      <div class="todo-item__controls">
+                        <button class="todo-item-button todo-item-button--done">
+                          <i class="material-icons">done_outline</i>
                         </button>
-                        <button class="todo-item-done-button">
-                            <i class="material-icons">done_outline</i>
+                        <button class="todo-item-button todo-item-button--delete">
+                          <i class="material-icons">delete</i>
                         </button>
+                      </div>
                     </li>
 
                     <li class="todo-item">
-                        <p class="todo-item-title">Todo 5</p>
-                        <button class="todo-item-delete-button">
-                            <i class="material-icons">delete</i>
+                      <p class="todo-item-title">Todo 5</p>
+                      <div class="todo-item__controls">
+                        <button class="todo-item-button todo-item-button--done">
+                          <i class="material-icons">done_outline</i>
                         </button>
-                        <button class="todo-item-done-button">
-                            <i class="material-icons">done_outline</i>
+                        <button class="todo-item-button todo-item-button--delete">
+                          <i class="material-icons">delete</i>
                         </button>
-                    </li>
-
-                    <li class="todo-item">
-                        <p class="todo-item-title">Todo 6</p>
-                        <button class="todo-item-delete-button">
-                            <i class="material-icons">delete</i>
-                        </button>
-                        <button class="todo-item-done-button">
-                            <i class="material-icons">done_outline</i>
-                        </button>
+                      </div>
                     </li>
                 </ol>
             </section>
@@ -121,14 +122,15 @@
             <section class="todo-category" id="not-important-not-urgent">
                 <ol class="not-important-not-urgent-list">
                     <li class="todo-item">
-                        <p class="todo-item-title">Todo 4</p>
-                        <button class="todo-item-delete-button">
-                            <i class="material-icons">delete</i>
+                      <p class="todo-item-title">Todo 4</p>
+                      <div class="todo-item__controls">
+                        <button class="todo-item-button todo-item-button--done">
+                          <i class="material-icons">done_outline</i>
                         </button>
-
-                        <button class="todo-item-done-button">
-                            <i class="material-icons">done_outline</i>
+                        <button class="todo-item-button todo-item-button--delete">
+                          <i class="material-icons">delete</i>
                         </button>
+                      </div>
                     </li>
                 </ol>
             </section>
