--- a/TODO/templates/login.html
+++ b/TODO/templates/login.html
@@ -6,10 +6,10 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" href="CSS/global_style.css">
-    <link rel="stylesheet" href="CSS/login_register_form.css">
+    <link rel="stylesheet" href="{{ url_for('static',filename='CSS/global_style.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static',filename='CSS/login_register_form.css') }}">
 
-    <script type="text/javascript" src="JS/drop-down_login_menu"></script>
+    <script type = "text/javascript" src = "{{ url_for('static', filename = 'JS/drop-down_login_menu.js') }}" ></script>
 </head>
 <body>
     <header>
