added basic navigation

--- a/TODO/templates/todos.html
+++ b/TODO/templates/todos.html
@@ -20,10 +20,10 @@
             </a>
             
             <div class="desctop_navbar_buttons">
-                <a href="#">Todo's</a>
-                <a href="#">Habits</a>
-                <a href="#">Trash</a>
-                <a href="#">Sign out</a>
+                <a href="/">Todo's</a>
+                <a href="/habits">Habits</a>
+                <a href="/trash">Trash</a>
+                <a href="login">Sign out</a>
             </div>
             
             <button class="phone_navbar_button" onclick="get_drop_login_menu()"><i class="material-icons md-48">reorder</i></button>
