--- a/TODO/templates/trash.html
+++ b/TODO/templates/trash.html
@@ -23,10 +23,10 @@
                 <a href="/">Todo's</a>
                 <a href="/habits">Habits</a>
                 <a href="/trash">Trash</a>
-                <a href="login">Sign out</a>
+                <a href="/login">Sign out</a>
             </div>
             
-            <button class="phone_navbar_button" onclick="get_drop_login_menu()"><i class="material-icons md-48">reorder</i></button>
+            <button class="phone_navbar_button" onclick="get_drop_down_menu()"><i class="material-icons md-48">reorder</i></button>
         </nav>
     </header>
 
