--- a/TODO/static/CSS/todo_styles.css
+++ b/TODO/static/CSS/todo_styles.css
@@ -46,6 +46,10 @@ main {
 	max-width: 280px;
 }
 
+.todo-item__controls {
+    display: grid;
+}
+
 .todo-item-button {
 	margin: 10px;
 	width: 40px;
@@ -57,6 +61,16 @@ main {
 
 .todo-item-button--done + .todo-item-button--delete {
 	margin-left: 10px;
+}
+
+.todo-item-button--done {
+    grid-row: 1;
+	grid-column: 1;
+}
+
+.todo-item-button--delete {
+    grid-row: 1;
+	grid-column: 2;
 }
 
 .todo-item-button--done > i {
