--- a/TODO/templates/todos.html
+++ b/TODO/templates/todos.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="{{ url_for('static',filename='CSS/global_style.css') }}">
     <link rel="stylesheet" href="{{ url_for('static',filename='CSS/todo_styles.css') }}">
 
+    <script type = "text/javascript" src = "{{ url_for('static', filename = 'JS/global.js') }}" ></script>
     <script type = "text/javascript" src = "{{ url_for('static', filename = 'JS/drop-down_main_menu.js') }}" ></script>
 </head>
 <body>
@@ -23,10 +24,10 @@
                 <a href="/">Todo's</a>
                 <a href="/habits">Habits</a>
                 <a href="/trash">Trash</a>
-                <a href="login">Sign out</a>
+                <a href="/login">Sign out</a>
             </div>
             
-            <button class="phone_navbar_button" onclick="get_drop_login_menu()"><i class="material-icons md-48">reorder</i></button>
+            <button class="phone_navbar_button" onclick="get_drop_down_menu()"><i class="material-icons md-48">reorder</i></button>
         </nav>
     </header>
 
@@ -64,7 +65,7 @@
             <section class="todo-category" id="important-urgent">
                 <ol class="important-urgent-list">
                     <li class="todo-item">
-                      <p class="todo-item-title">very very very very very very very long Todo 1</p>
+                      <p class="todo-item-title">very very very very very very very very very very very very very very long Todo 1</p>
                       <div class="todo-item__controls">
                         <button class="todo-item-button todo-item-button--done">
                           <i class="material-icons">done_outline</i>
