--- a/TODO/templates/register.html
+++ b/TODO/templates/register.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="{{ url_for('static',filename='CSS/login_register_form.css') }}">
 
     <script type = "text/javascript" src = "{{ url_for('static', filename = 'JS/drop-down_login_menu.js') }}" ></script>
-    <script type = "text/javascript" src = "{{ url_for('static', filename = 'JS/login-register_form_confirmation.js') }}" ></script>
+    <script type = "text/javascript" src = "{{ url_for('static', filename = 'JS/login-register_form_confirmation.js') }}"></script>
 </head>
 <body>
     <header>
@@ -29,7 +29,7 @@
         </nav>
     </header>
 
-    <form class="login-form" id="login-form" onsubmit="confirm_register_form()">
+    <form class="login-form" id="registration-form">
         <div class="username_field">
             <label for="username">Username</label>
             <input type="text" name="username" id="username" required>
