added div for error-messages for login and register forms. added password encryption

--- a/TODO/templates/login.html
+++ b/TODO/templates/login.html
@@ -30,6 +30,10 @@
     </header>
 
     <form class="login-form" id="login-form">
+        <div class="error-message-container" id="error-message-container">
+            <p id="error-message">hello</p>
+        </div>
+
         <div class="username_field">
             <label for="username">Username</label>
             <input type="text" name="username" id="username" required>
