--- a/TODO/templates/register.html
+++ b/TODO/templates/register.html
@@ -30,6 +30,10 @@
     </header>
 
     <form class="login-form" id="registration-form">
+        <div class="error-message-container" id="error-message-container">
+            <p id="error-message">hello</p>
+        </div>
+
         <div class="username_field">
             <label for="username">Username</label>
             <input type="text" name="username" id="username" required>
@@ -45,7 +49,7 @@
             <input type="password" name="password_confirmation" id="password_confirmation" required>
         </div>
 
-        <input class="button_to_submit" type="submit" value="Log in">
+        <input class="button_to_submit" type="submit" value="Sign up">
     </form>
 </body>
 </html>
