--- a/TODO/static/CSS/login_register_form.css
+++ b/TODO/static/CSS/login_register_form.css
@@ -1,7 +1,25 @@
+
 .login-form {
-	margin-top: 255px;
+	margin-top: 155px;
 	text-align: center;
 }
+
+.error-message-container {
+    height: 70px;
+    width: 830px;
+    background: rgba(163, 55, 55, 0.49);
+    box-sizing: border-box;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 13px;
+    margin:auto;
+    margin-bottom: 50px;
+    padding-top: 15px;
+    text-align: center;
+    font-size: 30px;
+    color: rgba(44, 6, 6, 0.85);
+    visibility: hidden;
+}
+
 
 .username_field > label, .password_field > label {
 	font-size: 30px;
@@ -21,8 +39,6 @@
 }
 
 
-
-
 @media (max-width: 980px) {
 
 	.login-form {
@@ -37,7 +53,7 @@
 
 	.username_field > label, .password_field > label {
 		font-size: 50px;
-		width: 280px;
+		width: 310px;
 	}
 
 }
