--- a/TODO/templates/habits.html
+++ b/TODO/templates/habits.html
@@ -99,5 +99,24 @@
         </div>
     </main>
 
+    <div class="gray_background"></div>
+
+    <form class="add_item_form">
+        <div class="item_name">
+            <label for="item_title">New Habit Title</label>
+            <input type="text" name="item_title" id="item_title" required>
+        </div>
+
+        <div class="item_name">
+            <label for="item_days">Periodicity (days)</label>
+            <input type="number" name="item_title" id="item_days" required>
+        </div>
+
+        <div>
+            <input class="button_to_cancel" type="submit" value="Cancel">
+            <input class="button_to_submit" type="submit" value="Add">
+        </div>
+    </form>
+
 </body>
 </html>
