--- a/TODO/templates/todos.html
+++ b/TODO/templates/todos.html
@@ -146,7 +146,7 @@
 
     <form class="add_item_form">
         <div class="item_name">
-            <label for="item_title">New Item Title</label>
+            <label for="item_title">New Todo Title</label>
             <input type="text" name="item_title" id="item_title" required>
         </div>
 
