--- a/TODO/static/CSS/todo_styles.css
+++ b/TODO/static/CSS/todo_styles.css
@@ -170,6 +170,8 @@ main {
 	background: rgba(221, 76, 14, 0.59);
 	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 	border-radius: 17px;
+	font-size: 20px;
+	border: none;
 }
 
 .add_todo_button:hover {
